--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run script
         run: |
-          python s24154.py CollegeDistance.csv models --n_folds 5 --seed 42
+          python3 s24154.py CollegeDistance.csv models --n_folds 5 --seed 42
 
       - name: Display summary
         run: |
