--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 attrs==22.2.0
+blinker==1.9.0
 build==0.10.0
 CacheControl==0.12.11
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
 cleo==2.0.1
+click==8.1.7
 contourpy==1.3.0
 crashtest==0.4.1
 cryptography==39.0.2
@@ -12,18 +14,22 @@ cycler==0.12.1
 distlib==0.3.6
 dulwich==0.21.3
 filelock==3.9.0
+Flask==3.0.3
 fonttools==4.54.1
 html5lib==1.1
 idna==3.4
 importlib-metadata==6.0.0
 installer==0.6.0
+itsdangerous==2.2.0
 jaraco.classes==3.2.3
 jeepney==0.8.0
+Jinja2==3.1.4
 joblib==1.4.2
 jsonschema==4.17.3
 keyring==23.13.1
 kiwisolver==1.4.7
 lockfile==0.12.2
+MarkupSafe==3.0.2
 matplotlib==3.9.2
 more-itertools==9.1.0
 msgpack==1.0.5
@@ -63,5 +69,6 @@ urllib3==1.26.15
 virtualenv==20.20.0
 virtualenv-clone==0.5.7
 webencodings==0.5.1
+Werkzeug==3.1.3
 xgboost==2.1.2
 zipp==3.15.0
